# reputation-aggregator-mock

./: .env  .gitignore  Cargo.toml  README.md  build.rs  calc.sql  docker-compose.yaml  sqlx-data.json
.github/workflows/: ci.yaml
crates/model/: Cargo.toml
crates/model/examples/: send_some.rs
crates/model/src/: client.rs  lib.rs
crates/model/tests/: test_seralize.rs
migrations/: 20220302164044_init.sql  20220317174305_peer-id-column.sql  20220415082732_agreement-details.sql
requestor-agent/: .gitignore  Dockerfile  README.md  pyproject.toml  requestor.py
requestor-agent/a1_requestor/: __main__.py  strategy.py  worker.py  yapapi_example_utils.py
src/: config.rs  dao.rs  main.rs  rest.rs
src/rest/: provider.rs  report.rs  requestor.rs  score.rs
tools/yagna-payment-db-exporter/: .env  Cargo.toml  sqlx-data.json
tools/yagna-payment-db-exporter/src/: main.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/src/: index.tsx
web/src/components/: App.tsx
web/src/scss/: main.scss
