[package]
name = "reputation-aggregator-mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "postgres", "chrono", "bigdecimal" ] }
log = "0.4"
env_logger="0.9.0"
actix-rt ="2.6.0"
actix-web = { version = "4.0.1", default-features=false }
reputation-aggregator-model = { version = "0.1.0", path="crates/model" }

[workspace]
