[package]
name = "reputation-aggregator-mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=[]
offline = ["sqlx/offline"]

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "postgres", "chrono", "bigdecimal", "offline" ] }
log = "0.4"
env_logger="0.9.0"
actix-rt ="2.6.0"
actix-web = { version = "4.0.1", default-features=false, features = ["macros"] }
reputation-aggregator-model = { version = "0.1.0", path="crates/model" }
serde= { version="1.0" }
dotenv = "0.15.0"
config = { version = "0.12", default-features=false, features=["json"]}
anyhow = "1.0.55"
actix-web-static-files = "4.0"
static-files = "0.2.1"
tracing-actix-web = "0.5"
tracing = "0.1"
tracing-subscriber="0.3.9"

[build-dependencies]
static-files = "0.2.1"

[workspace]
members=[
    "tools/*"
]