[package]
name = "reputation-aggregator-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.10.2"
bigdecimal = {version = "0.2.2", features=["serde"]}
chrono = {version = "0.4.19", features=["serde"]}
serde_json = "1.0"
serde="1.0"
