[package]
name = "yagna-payment-db-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
structopt = "0.3.26"
log="0.4.14"
env_logger = "0.9.0"
chrono = "0.4.19"
futures = "0.3.21"

[dependencies.sqlx]
version = "0.5.11"
features = ["runtime-actix-rustls", "sqlite", "chrono", "bigdecimal"]

[dependencies.reputation-aggregator-model]
version = "0.2"
features = ["client"]
path = "../../crates/model"

#[dependencies.sqlite3-sys]
#version="0.12.0"
